2022-01-20  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html5.tex (html5.4ht): add space after caption label.
	https://github.com/michal-h21/tex4ebook/issues/88

2022-01-19  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): added support for the Framed
	package's boxes.

2022-01-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/jknappen/tc/tcrm.htf
	): new version of the HTF file that doesn't use private unicode
	characters.

	* tex4ht-fonts-ebgaramond.tex,
	* tex4ht-fonts-fourier.tex,
	* tex4ht-fonts-kpfonts.tex,
	* tex4ht-fonts-libertine.tex,
	* tex4ht-fonts-newtx.tex,
	* tex4ht-fonts-noncjk.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/avantgar/pagdo8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/avantgar/pagdo8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/avantgar/pagdo8r.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/courier/pcrbo7t.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/courier/pcrbc7t.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/courier/pcrbo8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/courier/pcrbo8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Century_Schoolbook_L/pncr8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Century_Schoolbook_L/pncr8c.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumT-lf-ly1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumT-lf-sc-ly1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumT-lf-ts1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumT-sup-ly1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumTB-lf-ly1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumTB-lf-sc-ly1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/Linux_Biolinum_T/LinBiolinumTB-lf-ts1.htf